<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:weightSum="1">
    <ScrollView android:layout_height="wrap_content" android:id="@+id/scrollView1" android:layout_width="match_parent" android:layout_weight="0.08">
        <LinearLayout
  			xmlns:android="http://schemas.android.com/apk/res/android"
  			android:orientation="vertical"
  			android:layout_width="match_parent"
  			android:layout_height="match_parent" android:weightSum="1">

    			<TextView
    			    android:id="@+id/home_Title"
    			    android:layout_width="match_parent"
    			    android:layout_height="59dp"
    			    android:text="@string/home_title"
    			    android:textAppearance="?android:attr/textAppearanceLarge"
    			    android:textColor="#DC143C"
    			    android:textStyle="bold" >
</TextView>
    			<Button android:id="@+id/home_new_location" android:layout_width="match_parent" android:text="@string/home_new_location" android:layout_height="90dp"></Button>
    			<Button android:id="@+id/home_reported_damage" android:layout_width="match_parent" android:text="@string/home_reported_damage" android:layout_height="98dp"></Button>
    	</LinearLayout>
    </ScrollView>
    
</LinearLayout>
