<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:weightSum="1">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_notes_title"
        android:textColor="#DC143C"
        android:textAppearance="?android:attr/textAppearanceLarge" >
</TextView>
    <ScrollView android:layout_height="wrap_content" android:id="@+id/scrollView1" android:layout_width="match_parent">
        <LinearLayout
  			xmlns:android="http://schemas.android.com/apk/res/android"
  			android:orientation="vertical"
  			android:layout_width="match_parent"
  			android:layout_height="match_parent" android:weightSum="1">

    		<TextView
    		    android:id="@+id/add_gps_location"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/Add_GPS"
    		    android:textAppearance="?android:attr/textAppearanceMedium" >
</TextView>

    		<ImageView
    		    android:id="@+id/add_damage_image"
    		    android:layout_width="match_parent"
    		    android:layout_height="186dp"
    		    android:src="@drawable/icon" />

    		<Button
    		    android:id="@+id/add_pictures"
    		    android:layout_width="141dp"
    		    android:layout_height="wrap_content"
    		    android:text="Add A New Picture" />

    		<Button
    		    android:id="@+id/add_all_pictures"
    		    android:layout_width="141dp"
    		    android:layout_height="wrap_content"
    		    android:text="@string/AllPictures" />

    		<TextView
    		    android:id="@+id/TextView03"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/Address"
    		    android:textAppearance="?android:attr/textAppearanceMedium" >
</TextView>

    		<MultiAutoCompleteTextView
    		    android:id="@+id/add_street_address"
    		    android:layout_width="match_parent"
    		    android:layout_height="wrap_content"
    		    >
</MultiAutoCompleteTextView>

    		<TextView
    		    android:id="@+id/TextView02"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/rating"
    		    android:textAppearance="?android:attr/textAppearanceMedium" >
</TextView>

    		<Spinner
    		    android:id="@+id/add_ef_rating"
    		    android:layout_width="154dp"
    		    android:layout_height="wrap_content" >
</Spinner>

    		<TextView
    		    android:id="@+id/add_ef_rating1"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="Degree of Damage"
    		    android:textAppearance="?android:attr/textAppearanceMedium" >
</TextView>
    		
    		<Spinner
    		    android:id="@+id/add_degree_of_damage"
    		    android:layout_width="154dp"
    		    android:layout_height="wrap_content" />

    		<TextView
    		    android:id="@+id/TextView01"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/Notes"
    		    android:textAppearance="?android:attr/textAppearanceMedium" >
</TextView>
    		<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="match_parent">

        		<MultiAutoCompleteTextView
        		    android:id="@+id/add_notes_about_damage"
        		    android:layout_width="match_parent"
        		    android:layout_height="90dp"
        		    >
</MultiAutoCompleteTextView>
<ListView
    android:id="@+id/list"
  	android:layout_width="fill_parent"
    android:layout_height="0dip"
    android:layout_weight="1" >
</ListView>
        	
   		 	</LinearLayout>
    		<Button android:layout_width="match_parent" android:text="Delete Damage Location" android:layout_height="wrap_content" android:id="@+id/Delete"></Button>
   		 	<Button android:text="Save Damage Location" android:layout_height="wrap_content" android:id="@+id/Save" android:layout_width="match_parent"></Button>
		</LinearLayout>
    </ScrollView>
    </LinearLayout>
